codestate/codestate-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: codestate
    service: frontend
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: codestate
apiVersion: v1
kind: ServiceAccount
metadata:
  name: frontend-codestate
  labels:
    account: codestate
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: codestate
    tier: frontend
  name: userapi
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: codestate
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: codestate
        tier: frontend
    spec:
      containers:
      - image: docker.io/itsaurabh/codestate:v1
        imagePullPolicy: IfNotPresent
        name: userapi
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
status: {}
